src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>NPSP_Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Ste__c</fullName>
        <label>Next Step 2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolarBot_Model__c</fullName>
        <label>SolarBot Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solarbot_Models</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Conditions__c</fullName>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>crms11__Default_End_Date__c</fullName>
        <label>Default End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__Default_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Location</label>
        <referenceTo>crms11__Location__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Default_Start_Date__c</fullName>
        <label>Default Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__QuoteBeginDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__QuoteBillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>crms11__QuoteEndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__QuotePaymentMode__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>crms11__QuotePaymentTime__c</fullName>
        <label>Payment Terms</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__QuoteVersion__c</fullName>
        <label>Quote Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Recalculate_Finance_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Finance Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Outstanding__c</fullName>
        <description>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</description>
        <formula>Amount - NULLVALUE(npe01__Payments_Made__c, 0) - NULLVALUE(npe01__Amount_Written_Off__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</inlineHelpText>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Written_Off__c</fullName>
        <description>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</description>
        <inlineHelpText>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</inlineHelpText>
        <label>Payment Writeoff Amount</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Written_Off__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Contact_Id_for_Role__c</fullName>
        <description>System field updated automatically.  Do not use.</description>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Do_Not_Automatically_Create_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If payments are active, and if this is checked, a new payment will not be automatically created for this Opportunity.</description>
        <inlineHelpText>If payments are active, and if checked, a new payment will not be automatically created for this Opportunity.</inlineHelpText>
        <label>Do Not Automatically Create Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Is_Opp_From_Individual__c</fullName>
        <description>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</description>
        <formula>IF( Account.npe01__SYSTEMIsIndividual__c, &apos;true&apos;, &apos;false&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</inlineHelpText>
        <label>Is Opp From Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Member_Level__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Determines the value on the Contact or Account of the Last Membership Level field.</inlineHelpText>
        <label>Member Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Membership_End_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Origin__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reacquire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Membership_Start_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Number_of_Payments__c</fullName>
        <description>Calculated based on the Payment object.</description>
        <inlineHelpText>Total number of payments for this Opportunity (Donation)</inlineHelpText>
        <label>Number of Payments</label>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Payments_Made__c</fullName>
        <description>The total value of Payments marked as paid for this Opportunity.</description>
        <inlineHelpText>The total value of Payments marked as paid for this Opportunity.</inlineHelpText>
        <label>Payment Amount Received</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__CombinedRollupFieldset__c</fullName>
        <description>Hidden system field, do not add to layouts.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(npe01__Member_Level__c) + &apos;;|;&apos;+ TEXT(npe01__Membership_Origin__c) + &apos;;|;&apos; +  Id</formula>
        <inlineHelpText>Formula: Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__systemHouseholdContactRoleProcessor__c</fullName>
        <description>Hidden system field.  Do not update, updated by automatic process.</description>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities.  DEPRECATED.  Replaced by custom settings.</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Opportunities</fullName>
                    <default>true</default>
                    <label>All Opportunities</label>
                </value>
                <value>
                    <fullName>No Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Date__c</fullName>
        <description>The date that you acknowledged this Opportunity.</description>
        <inlineHelpText>The date that you acknowledged this Opportunity.</inlineHelpText>
        <label>Acknowledgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Status__c</fullName>
        <description>The acknowledgement status of this Opportunity.</description>
        <inlineHelpText>The acknowledgement status of this Opportunity.</inlineHelpText>
        <label>Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Now</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Ask_Date__c</fullName>
        <description>The date the donor was asked for this Donation. This may be different from the date you received it.</description>
        <inlineHelpText>The date the donor was asked for this Donation. This may be different from the date you received it.</inlineHelpText>
        <label>Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Number__c</fullName>
        <description>The batch that created this Opportunity. This field is automatically populated based on your Batch Number Settings in NPSP Settings.</description>
        <inlineHelpText>The batch that created this Opportunity. This field is automatically populated based on your Batch Number Settings in NPSP Settings.</inlineHelpText>
        <label>Batch Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Closed_Lost_Reason__c</fullName>
        <description>Notes on why the donation ask was not successful.</description>
        <inlineHelpText>Notes on why the donation ask was not successful.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__CommitmentId__c</fullName>
        <description>External identifier for Salesforce.org payment service integration.</description>
        <externalId>true</externalId>
        <inlineHelpText>External identifier for Salesforce.org payment service integration.</inlineHelpText>
        <label>Elevate Recurring Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__DisableContactRoleAutomation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this field disables several aspects of NPSP Opportunity Contact Role automation, potentially resulting in incorrect or duplicate data. Refer to the product documentation for more details.</description>
        <inlineHelpText>When selected, this field disables several aspects of NPSP Opportunity Contact Role automation, potentially resulting in incorrect or duplicate data. Refer to the product documentation for more details.</inlineHelpText>
        <label>Disable Contact Role Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Fair_Market_Value__c</fullName>
        <description>The Fair Market Value of an In-Kind gift.</description>
        <inlineHelpText>The Fair Market Value of an In-Kind gift.</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Gift_Strategy__c</fullName>
        <description>Categorizes the type of ask for this Opportunity, for example, New Donor.</description>
        <inlineHelpText>Categorizes the type of ask for this Opportunity, for example, New Donor.</inlineHelpText>
        <label>Gift Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Donor</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Date__c</fullName>
        <description>The date of the Grant&apos;s inception, according to the document or contract sent by the grantmaking organization.</description>
        <inlineHelpText>The date of the Grant&apos;s inception, according to the document or contract sent by the grantmaking organization.</inlineHelpText>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Number__c</fullName>
        <description>Use this to track unique numbers sometimes assigned by grantmaking organizations.</description>
        <inlineHelpText>Use this to track unique numbers sometimes assigned by grantmaking organizations.</inlineHelpText>
        <label>Grant Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_End_Date__c</fullName>
        <description>The date on which the period of the grant ends.</description>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_Start_Date__c</fullName>
        <description>The date on which the period of the grant begins.</description>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Program_Area_s__c</fullName>
        <description>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</description>
        <inlineHelpText>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</inlineHelpText>
        <label>Program Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Requirements_Website__c</fullName>
        <description>A URL that points to the grant requirements on the grantmaker&apos;s website.</description>
        <inlineHelpText>A URL that points to the grant requirements on the grantmaker&apos;s website.</inlineHelpText>
        <label>Grant Requirements Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Honoree_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the honoree for this Donation.</description>
        <inlineHelpText>Lookup to the Contact record of the honoree for this Donation.</inlineHelpText>
        <label>Honoree Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Honoree Contact)</relationshipLabel>
        <relationshipName>Honoree_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</inlineHelpText>
        <label>Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Description__c</fullName>
        <description>Holds any rich text description of the In-Kind Gift, including pictures.</description>
        <inlineHelpText>Holds any rich text description of the In-Kind Gift, including pictures.</inlineHelpText>
        <label>In-Kind Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Donor_Declared_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the donor provided the Fair Market Value for this In-Kind Gift.</description>
        <inlineHelpText>Indicates whether the donor provided the Fair Market Value for this In-Kind Gift.</inlineHelpText>
        <label>In-Kind Donor Declared Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Type__c</fullName>
        <description>The type of In-Kind Gift, for example, Goods or Services.</description>
        <inlineHelpText>The type of In-Kind Gift, for example, Goods or Services.</inlineHelpText>
        <label>In-Kind Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goods</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Is_Grant_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Grant is a renewal of a previous Grant.</description>
        <inlineHelpText>Indicates whether the Grant is a renewal of a previous Grant.</inlineHelpText>
        <label>Is Grant Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account record of the company that will match this Donation.</description>
        <inlineHelpText>Lookup to the Account record of the company that will match this Donation.</inlineHelpText>
        <label>Matching Gift Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Employer__c</fullName>
        <description>The name of the company that will match this Donation.</description>
        <inlineHelpText>The name of the company that will match this Donation.</inlineHelpText>
        <label>Matching Gift Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Status__c</fullName>
        <description>The status of the Matching Gift for this Donation, for example, Submitted or Received.</description>
        <inlineHelpText>The status of the Matching Gift for this Donation, for example, Submitted or Received.</inlineHelpText>
        <label>Matching Gift Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Opportunity record for the Matching Gift for this Donation.</description>
        <inlineHelpText>Lookup to the Opportunity record for the Matching Gift for this Donation.</inlineHelpText>
        <label>Matching Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>MatchedGifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Next_Grant_Deadline_Due_Date__c</fullName>
        <description>The due date for this Opportunity&apos;s next Deliverable (read only).</description>
        <inlineHelpText>The due date for this Opportunity&apos;s next Deliverable (read only).</inlineHelpText>
        <label>Next Deliverable Date</label>
        <summarizedField>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deliverable_Close_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>npsp__Grant_Deadline__c.npsp__Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Message__c</fullName>
        <description>A personalized message for the notification recipient.</description>
        <inlineHelpText>A personalized message for the notification recipient.</inlineHelpText>
        <label>Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Preference__c</fullName>
        <description>Indicates how the notification recipient should be notified, for example, by email or phone.</description>
        <inlineHelpText>Indicates how the notification recipient should be notified, for example, by email or phone.</inlineHelpText>
        <label>Notification Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Do Not Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>